static/css/style.css
/* ... */
.red-menu:before {
  background-image: -webkit-gradient(linear, left top, right top, from(#bd0701), to(#fe5a5a));
  background-image: linear-gradient(90deg, #bd0701, #fe5a5a);
}
.magenta-menu:before {
  background-image: -webkit-gradient(linear, left top, right top, from(#fe3392), to(#fd931f));
    background-image: linear-gradient(90deg, #fe3392, #fd931f);
}

#fh5co-header #navbar li a span:before {
  content: "";
  position: absolute;
  width: 100%;
  height: 2px;
  bottom: 0;
  left: 0;
  visibility: hidden;
  -webkit-transform: scaleX(0);
  -moz-transform: scaleX(0);
  -ms-transform: scaleX(0);
  -o-transform: scaleX(0);
  transform: scaleX(0);
  -webkit-transition: all 0.3s ease-in-out 0s;
  -moz-transition: all 0.3s ease-in-out 0s;
  -ms-transition: all 0.3s ease-in-out 0s;
  -o-transition: all 0.3s ease-in-out 0s;
  transition: all 0.3s ease-in-out 0s;
}
#fh5co-header #navbar li a:hover {
  color: #000;
}
#fh5co-header #navbar li a:hover span:before {
  visibility: visible;
  -webkit-transform: scaleX(1);
  -moz-transform: scaleX(1);
  -ms-transform: scaleX(1);
  -o-transform: scaleX(1);
  transform: scaleX(1);
}
#fh5co-header #navbar li.active a {
  background: transparent;
  background: none;
  color: #000;
}
#fh5co-header #navbar li.active a span:before {
  visibility: visible;
  -webkit-transform: scaleX(1);
  transform: scaleX(1);
}
#fh5co-header .navbar-brand {
  float: left;
  display: block;
  font-size: 30px;
  font-weight: 700;
  padding-left: 0;
  color: #000;
}
#fh5co-header.navbar-fixed-top {
  position: fixed !important;
  background: #fff;
  -webkit-box-shadow: 0 0 9px 0 rgba(0, 0, 0, 0.1);
  -moz-box-shadow: 0 0 9px 0 rgba(0, 0, 0, 0.1);
  -ms-box-shadow: 0 0 9px 0 rgba(0, 0, 0, 0.1);
  box-shadow: 0 0 9px 0 rgba(0, 0, 0, 0.1);
  margin-top: 0px;
  line-height: 1.5;
  top: 0px;
}
#fh5co-header.navbar-fixed-top .navbar-brand {
  color: black;
}
#fh5co-header.navbar-fixed-top #navbar li a {
  color: var(--main-color);
  -webkit-transition: 0.1s;
  -o-transition: 0.1s;
  transition: 0.1s;
}
#fh5co-header.navbar-fixed-top #navbar li a:hover {
  color: #000;
}
#fh5co-header.navbar-fixed-top #navbar li.active a {
  background: transparent;
  background: none;
  color: #000;
}
#fh5co-header.navbar-fixed-top #navbar li.active a span:before {
  visibility: visible;
  -webkit-transform: scaleX(1);
  transform: scaleX(1);
  /* background-color: #000; */
  /* background-image: -webkit-gradient(linear, left top, right top, from(#183bd0), to(#2cb6ef));
  background-image: linear-gradient(90deg, #183bd0, #2cb6ef); */
}
#fh5co-header .navbar-default {
  border: transparent;
  background: transparent;
  -webkit-border-radius: 0px;
  -moz-border-radius: 0px;
  -ms-border-radius: 0px;
  border-radius: 0px;
}
@media screen and (max-width: 992px) {
  #fh5co-header .navbar-default {
    margin-top: 0px;
    padding-right: 0px;
    padding-left: 0px;
  }
}
#fh5co-header .navbar-default .brand-slogan {
  margin: 28px 0 0 15px;
  float: left;
  letter-spacing: 2px;
  color: #adadad;
}
#fh5co-header .navbar-default .brand-slogan em {
  color: #999999;
  font-style: normal;
}
#fh5co-header a {
  -webkit-transition: 0s;
  -o-transition: 0s;
  transition: 0s;
}
section {
  position: relative;
  width: 100%;
  /* background-color: #999999; */
  overflow: hidden;
}
#fh5co-home {
  /* background-color: transparent; */
  /* background-size: cover; */
  /* background-attachment: fixed; */
  position: relative;
  width: 100%;
  /* background-color: #999999; */
  color: #000;
  overflow: hidden;
}
.gradient {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  z-index: 2;
  
}
#fh5co-home .gradient {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  z-index: 2;
  opacity: .9;
}
#fh5co-home, #fh5co-home .text-wrap {
  height: 900px;
}
#fh5co-home .text-wrap {
  display: table;
  width: 100%;
  position: relative;
  z-index: 4;
}
#fh5co-home .text-inner {
  display: table-cell;
  vertical-align: middle;
  text-align: center;
}
/* #fh5co-home .text-inner a {
  border-bottom: 1px dashed var(--main-color);
  -webkit-transition: 0.5s;
  -o-transition: 0.5s;
  transition: 0.5s;
} */
#fh5co-home .text-inner a:hover, #fh5co-home .text-inner a:active, #fh5co-home .text-inner a:focus {
  text-decoration: none;
  /* color: white; */
  border-bottom: 1px dashed white;
}
#fh5co-home .text-inner h1 {
  font-size: 50px;
  /* color: white; */
  margin: 0 0 20px 0;
}
#fh5co-home .text-inner h2 {
  font-size: 28px;
  line-height: 38px;
  /* font-weight: 300; */
  color: rgba(255, 255, 255, 0.8);
  margin: 0;
}

.slant {
  position: absolute;
  transform: rotate(-1.5deg);
  -ms-transform: rotate(-1.5deg);
  -webkit-transform: rotate(-1.5deg);
  -o-transform: rotate(-1.5deg);
  -moz-transform: rotate(-1.5deg);
  background-color: #f8f8f8;
  content: "";
  z-index: 3;
  display: inline-block;
  height: 70px;
  bottom: 0;
  margin-bottom: -35px;
  padding: 0;
  width: 101%;
}

#fh5co-intro {
  position: relative;
  bottom: 0;
  margin-top: -110px;
  z-index: 11;
  padding-bottom: 3em;
}
#fh5co-intro .section-heading h2:after {
  background: #999999;
}
@media screen and (max-width: 768px) {
  #fh5co-intro {
    padding-bottom: 3em;
  }
}
#fh5co-intro > div {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -moz-flex-wrap: wrap;
}
#fh5co-intro .fh5co-block .title {
  color: #000;  /* font-weight: 400; */
  margin: 0;
  text-transform: capitalize;
  font-weight: 700;
  font-size: 1.6rem;
  font-family: 'Frank Ruhl Libre';
}
/* ... */

